bug fix in grade submission in pre-Bolonha Master Degrees: submit and catch domain exception individualy for each enrolment evaluation; otherwise enrolment evaluations with error will be put in inconsistent state in the database